--- a/test/hitl/card.binary/platformio.ini
+++ b/test/hitl/card.binary/platformio.ini
@@ -28,18 +28,9 @@ test_framework = unity
 ; to show up before running the tests. See https://github.com/platformio/platformio-core/issues/3742.
 extra_scripts = post:after_upload.py
 
-; We need to pass this down to OpenOCD so that it uses the correct ST-LINK.
-; In my (Hayden's) HIL setup, there are many ST-LINKs connected to the same
-; machine. Simply specifying the serial port corresponding to a given ST-LINK
-; via upload_port doesn't work, so we have to use the specific serial number
-; of the ST-LINK we're trying to target.
-;upload_flags =
-;    -c
-;    hla_serial 0029000F3156501420323443
-
 [env:debug]
 build_type = debug
 debug_test = *
 upload_protocol = custom
-upload_command = ${sysenv.GDB_CMD} -ex "set confirm off" -ex "set pagination off" -ex "file .pio/build/debug/firmware.elf" -ex "target extended-remote ${sysenv.MCU_GDB_SERVER_IP}:${sysenv.MCU_GDB_SERVER_PORT}" -ex "monitor reset halt" -ex "load" -ex "monitor reset" -ex "quit"
-test_port = /tmp/ns_mcu_usb
+upload_command = ${sysenv.GDB_CMD} -ex "set confirm off" -ex "set pagination off" -ex "file .pio/build/debug/firmware.elf" -ex "target extended-remote ${sysenv.GDB_SERVER_IP}:${sysenv.HOST_MCU_GDB_SERVER_PORT}" -ex "monitor reset halt" -ex "load" -ex "monitor reset" -ex "quit"
+test_port = ${sysenv.HOST_MCU_USB_PATH}
